configuração ContatoService.js

--- a/contatooh/public/index.html
+++ b/contatooh/public/index.html
@@ -7,7 +7,7 @@
 		<title>Contatooh</title>
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
-	</head>	
+	</head>
 	<body class="container">
 		<div ng-view></div>
 
@@ -17,5 +17,6 @@
 		<script src="js/main.js"></script>
 		<script src="js/controllers/ContatosController.js"></script>
 		<script src="js/controllers/ContatoController.js"></script>
+		<script src="js/services/ContatoService.js"></script>
 	</body>
 </html>
